<resources>
    <!-- Application values -->
    <string name="app_label">Novel Checker</string>
    <string name="app_name">Light Novels Update Checker</string>

    <string name="date_time_format">yyyy-MM-dd HH:mm</string>

    <!-- Menu values -->
    <string name="menu_navigation_last_updates">Last updates</string>
    <string name="menu_navigation_favorites">Favorites</string>
    <string name="menu_navigation_novels">Novels</string>

    <string name="menu_main_refresh">Refresh</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_exit">Exit</string>

    <string name="menu_popup_favorites_refresh">Refresh last chapters</string>
    <string name="menu_popup_favorites_recache">Recache last chapters</string>
    <string name="menu_popup_favorites_open_url">Open url in browser</string>
    <string name="menu_popup_favorites_remove">Remove from favorites</string>

    <!-- Actions values -->
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>

    <!-- Notification values -->
    <string name="notification_new_chapter">New chapter published !</string>

    <!-- Settings values -->
    <string name="settings_application_title">Application</string>
    <string name="settings_application_theme">Theme</string>

    <string name="settings_background_task_title">Background service</string>
    <string name="settings_background_task_enable">Enable refresher</string>
    <string name="settings_background_task_enable_sum">Refresh favorites novels in background</string>
    <string name="settings_background_task_interval">Refresh interval</string>

    <string name="settings_notification_title">Notification</string>
    <string name="settings_notification_vibrate">Enable vibration</string>
    <string name="settings_notification_vibrate_sum">Vibration on notification</string>
    <string name="settings_notification_lights">Enable lights indicator</string>
    <string name="settings_notification_lights_sum">Light signals on notification</string>
    <string name="settings_notification_sound">Enable sound</string>
    <string name="settings_notification_sound_sum">Sound on notification</string>

    <!-- Arrays values -->
    <string name="last_update_filters_all">All chapters</string>
    <string name="last_update_filters_today">Published today</string>

    <string name="theme_dark">Dark theme</string>
    <string name="theme_light">Light theme</string>

    <string name="time_10_minute_title">10 minutes</string>
    <string name="time_30_minute_title">30 minutes</string>
    <string name="time_1_hour_title">1 hour</string>
    <string name="time_2_hour_title">2 hour</string>
    <string name="time_6_hour_title">6 hour</string>
    <string name="time_12_hour_title">12 hour</string>
    <string name="time_1_day_title">1 day</string>

    <!-- Last updates fragment values -->
    <string name="last_update_date_title">Last update from servers: </string>
    <string name="last_update_date_process">Wait refresh…</string>

    <string name="list_empty_text">No Results</string>

    <string name="list_item_last_update_novel">Novel</string>
    <string name="list_item_last_update_publication">Published</string>
    <string name="list_item_last_update_number">Number</string>
    <string name="list_item_last_update_caption">Caption</string>

    <!-- Novels fragment values -->
    <string name="list_item_novel_short_name">Short Name</string>
    <string name="list_item_novel_name">Name</string>
    <string name="list_item_novel_last_chapter_number">Number</string>
    <string name="list_item_novel_last_chapter_title">Title</string>
    <string name="list_item_novel_last_chapter_publication">Published</string>
</resources>
