<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/last_update_list_item_padding_top"
        android:paddingEnd="@dimen/last_update_list_item_padding_side"
        android:paddingStart="@dimen/last_update_list_item_padding_side"
        android:paddingBottom="@dimen/last_update_list_item_padding_bottom" >

        <ImageView
            android:id="@+id/list_item_novel_image"
            android:layout_width="64dp"
            android:layout_height="80dp"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/list_item_novel_short_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_novel_short_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/list_item_novel_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="0dp"
                    android:paddingStart="@dimen/list_item_padding_start"
                    android:text="@string/list_item_novel_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorHoloBlueDark"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/list_item_novel_last_chapter_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/list_item_novel_last_chapter_release"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/list_item_novel_last_chapter_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_novel_last_chapter_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/list_item_novel_last_chapter_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="0dp"
                    android:paddingStart="@dimen/list_item_padding_start"
                    android:text="@string/list_item_novel_last_chapter_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>